Fix tag cell alignment

--- a/src/app/components/TagCell/styles.css
+++ b/src/app/components/TagCell/styles.css
@@ -1,7 +1,6 @@
 .NLT__tag-cell {
 	display: flex;
 	align-items: center;
-	padding: 4px 8px;
 	white-space: nowrap;
 }
 
@@ -9,7 +8,7 @@
 	display: flex;
 	align-items: center;
 	border-radius: 8px;
-	padding: 2px 8px;
+	padding: 1px 8px;
 	width: fit-content;
 	color: black;
 }
